# agent-control-plane

./: .dockerignore  .env.example  CHATVERLAUF.md  DEPLOYMENT.md  Dockerfile  HANDBUCH.md  PRICING.md  apply_drizzle_migration.mjs  architecture.md  browser_verification_notes.txt  drizzle.config.ts  handoff.md  migration-status.md  module_activation_notes.md  package.json  pnpm-lock.yaml  privacy_research_notes.md  product-structure.md  tmp_apply_swarm_messages_migration.mjs  todo.md  verify_approval_schema.mjs  vitest.config.ts  vitest.setup.ts
client/: index.html
docs/: benutzerhandbuch-agent-control-plane.md  handbuch-agenten-verwaltung.md  handbuch-approval-workflow.md  handbuch-audit-log.md  handbuch-dashboard-uebersicht.md  handbuch-evaluation-layer.md  handbuch-observability-und-cost-monitoring.md  handbuch-policy-engine.md  handbuch-rollen-und-rechteverwaltung.md  handbuch-runtime-guardrails.md  handbuch-tool-und-connector-layer.md
drizzle/: 0000_amusing_blonde_phantom.sql  0001_premium_shaman.sql  0002_amused_klaw.sql  0003_lean_hobgoblin.sql  0004_parched_garia.sql  0005_silly_wallow.sql  0006_fearless_fallen_one.sql  0007_whole_smasher.sql  0008_crazy_warbound.sql  schema.ts
examples/: example-agent.mjs  js_agent.mjs  python_agent.py
scripts/: seed-autonomy-demo.ts  seed.ts
sdk/python/: README.md  pyproject.toml
sdk/python/agent_control_plane/: __init__.py  client.py
server/: agentForm.test.ts  apiKeys.test.ts  approvalChainEditor.test.ts  billing.test.ts  controlPlane.test.ts  db.ts  oauth.devlogin.test.ts  plans.ts  privacy.test.ts  privacy.ts  (+6 more)
(+57 files in other folders)
