[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-control-plane"
version = "0.1.0"
description = "Python SDK for the Agent Control Plane governance API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = ["requests>=2.25"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]

[tool.hatch.build.targets.wheel]
packages = ["agent_control_plane"]
